# esp32-candlelight_fw

./: sdkconfig
components/spi_ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
main/: CMakeLists.txt  main.c  usb_config.h
main/can2/: can.c  can.h
main/others/: led.c  led.h  term_resistor.c  term_resistor.h
main/usb_cherry/CherryUSB/: CMakeLists.txt
main/usb_cherry/CherryUSB/class/usbcan/: gs_usb.h  usb_can.h  usbd_can.c  usbd_can.h  usbd_help.h  usbh_xxx.c
main/usb_cherry/CherryUSB/common/: usb_log.h
main/usb_cherry/CherryUSB/core/: usbd_core.c
main/usb_cherry/CherryUSB/port/template/: usb_dc.c
main/usb_cherry/addition/: usb_cherry_platform.c
